--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </style>
 </head>
 <body>
+    <h1>Полари</h1>
 	<div id="map" style="background-color:White;"/>
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script>
