added leaflet local files

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />  
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+	<link rel="stylesheet" href="leaflet.css" />
     <style>
         body
         {
@@ -22,7 +22,7 @@
 <body>
     <h1>Полари</h1>
 	<div id="map" style="background-color:White;"/>
-    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+    <script src="leaflet.js"></script>
     <script>
       var image = 'map';
       var width = 4967;
