added test marker

--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Полари</title>
+  <head>
+    <title>Полари</title>
     <meta charset="utf-8" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />  
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
-	<link rel="stylesheet" href="leaflet.css" />
+    <link rel="stylesheet" href="leaflet.css" />
     <style>
-        body
-        {
-            padding: 0;
-            margin: 0;
-        }
-        html, body, #map
-        {
-            height: 100%;
-            width: 100%;
-        }
+      body {
+        padding: 0;
+        margin: 0;
+      }
+      html,
+      body,
+      #map {
+        height: 100%;
+        width: 100%;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Полари</h1>
-	<div id="map" style="background-color:White;"/>
+    <div id="map" style="background-color: White" />
     <script src="leaflet.js"></script>
     <script>
       var image = 'map';
@@ -41,24 +41,53 @@
       var west = -180;
       var east = (180 / Math.PI) * (rx / radius);
       var north = 85.05;
-      var south = (360 / Math.PI) * (Math.atan(Math.exp(ry / radius)) - (Math.PI / 4));
+      var south =
+        (360 / Math.PI) * (Math.atan(Math.exp(ry / radius)) - Math.PI / 4);
       var rc = (tileWidth / 2 + ry) / 2;
-      var centerLat = (360 / Math.PI) * (Math.atan(Math.exp(rc / radius)) - (Math.PI / 4));
+      var centerLat =
+        (360 / Math.PI) * (Math.atan(Math.exp(rc / radius)) - Math.PI / 4);
       var centerLon = (west + east) / 2;
-      var bounds = [[south, west], [north, east]];
+      var bounds = [
+        [south, west],
+        [north, east],
+      ];
 
-      var map = new L.Map('map', {maxBounds: bounds});
+      var map = new L.Map('map', { maxBounds: bounds });
 
       L.tileLayer(image + '/{z}-{x}-{y}.jpg', {
-        maxZoom: maxLevel, minZoom: minLevel, opacity: 1.0, zIndex: 1, noWrap: true,
+        maxZoom: maxLevel,
+        minZoom: minLevel,
+        opacity: 1.0,
+        zIndex: 1,
+        noWrap: true,
         bounds: bounds,
-        attribution: '<a href="https://github.com/oliverheilig/LeafletPano">LeafletPano</a>'
-		  }).addTo(map);
-		  
+        attribution:
+          '<a href="https://github.com/oliverheilig/LeafletPano">LeafletPano</a>',
+      }).addTo(map);
+
       var zoom = map.getBoundsZoom(bounds);
       var center = new L.latLng(centerLat, centerLon);
-  
-  		map.setView(center, zoom);
-	</script>
-</body>
+
+      map.setView(center, zoom);
+
+      var LeafIcon = L.Icon.extend({
+        options: {
+          //shadowUrl: 'js/images/marker-shadow.png',
+          iconSize: [30, 30],
+          shadowSize: [35, 35],
+          iconAnchor: [10, 10],
+          shadowAnchor: [10, 10],
+          popupAnchor: [0, -20],
+        },
+      });
+
+      var castle = new LeafIcon({ iconUrl: './images/castle.png' });
+
+      L.marker([35.9, -54.8], { icon: castle })
+        .bindPopup(
+          '<strong>Фаунтерра - первый город, основанный Прародителями в подлунном мире. На данный момент, крупнейший город в мире (360тыс.). На протяжении всей истории лишь раз был захвачен (Багряная Смута), однако правящая династия менялась тем или иным способом четыре раза. <Br>Фаунтерру называют городом двухсот башен, поскольку многие обеспеченные люди пристраивают к своим домам башни, желая сделать их заметными издали, выделиться. Башни приобретают порой очень причудливые формы и расцветки.</strong><br />'
+        )
+        .addTo(map);
+    </script>
+  </body>
 </html>
