--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
     </style>
   </head>
   <body>
+    <form>
+      <label for="latitude">Latitude:</label>
+      <input id="latitude" type="text" />
+      <label for="longitude">Longitude:</label>
+      <input id="longitude" type="text" />
+      :: or, enter your own lat-long values and <input type="button" value="Jump there" onClick="updateLatLng(document.getElementById('latitude').value,document.getElementById('longitude').value,1)">
+      :: <a href="#" onclick="map.zoomOut(3, {animate:true})">zoom out</a> ::
+      :: <a href="#" onclick="map.zoomIn(3, {animate:true})">zoom in</a>
+      </form>
     <h1>Полари</h1>
-    <div id="map" style="background-color: White" />
+    <div id="map" style="background-color: White" />    
     <script src="leaflet.js"></script>
     <script src="BaseLabel.js"></script>
     <script src="map.js"></script>
