--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       ><div><img src="https://mc.yandex.ru/watch/69530491" style="position: absolute; left: -9999px" alt="" /></div
     ></noscript>
     <!-- /Yandex.Metrika counter -->
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <!-- <form>
